Version 0.4pre1 -- Development
------------------------------
- Added option to configure default folder directory.  ex: ~/mail
- Configuration script added: config/conf.pl
- Addressbook with LDAP support
- Big speed improvements with folder listing
- Added Subscribe/Unsubscribe to folders
- Fixed bug in UW that didn't mark unseen messages
- Saving sent messages into $sent_folder
- It doesn't bail out if PHP wasn't compiled with --with-gettext.  
    It only uses english in this case.
- Added support for Cyrillic (thanks to Artem Botchkov for help)
- Honoring charset parameter for the body.
- Changed the way emptying of trash was done to work better
    across different IMAP servers


Version 0.3.1 -- March 13, 2000
-------------------------------
- Fixed a bug that didn't allow downloading of attachments

Version 0.3 (final) -- March 10, 2000
-------------------------------------
- Fixed bug in smtp.php and made sending RFC complient
- Fixed a bug that wouldn't let you rename folders with UW server.
- Other minor bugfixes

Version 0.3pre2 -- March 5, 2000 
--------------------------------
- Rewrote folder deletion.  It works much more flexably now.
- Fixed message deletion that didn't always delete the right messages.
- Removed font tags
- Better character translation, especially for i18n
- Added the choice of language as a user preference
- Bug fixes, bug fixes, bug fixes
- Fixed bugs in message moving and deleting
- Rewrote all IMAP functions from scratch

Version 0.3pre1 -- February 17, 2000
------------------------------------
- Added user-specific preferences including:
    Full Name (for outbound messages)
    Reply-to address
    Theme
    Move messages to trash option (true/false)
    Wrap incoming text at XX characters
    Editor window size (in characters)
    Time between reloads of the left folder list
    Signature
- Rewrote SMTP functions.  It now works and handles error correction.
- Only folders that you're subscribed to will be listed