@@ -1,6 +1,7 @@
 Version 0.4pre1 -- Development
 ------------------------------
-- Added option to configure default folder directory.  ex: ~/mail
+- Parsing the body for URLs and translating them to links
+- Added option to configure default folder directory. ie: ~/mail
 - Configuration script added: config/conf.pl
 - Addressbook with LDAP support
 - Big speed improvements with folder listing
